@@ -39,7 +39,8 @@ extern gid_t pseudo_egid;
 extern gid_t pseudo_sgid;
 extern gid_t pseudo_rgid;
 extern gid_t pseudo_fgid;
-extern int pseudo_dir_fd;
+extern int pseudo_prefix_dir_fd;
+extern int pseudo_localstate_dir_fd;
 extern FILE *pseudo_pwd_open(void);
 extern FILE *pseudo_grp_open(void);
 extern void pseudo_pwd_close(void);
