@@ -1,6 +1,8 @@
 2010-08-03:
 	* (mhatle) Fix parallel build problem
 	* (mhatle) allow both environment CFLAGS and internals CFLAGS
+	* (mhatle) add PSEUDO_BINDIR, PSEUDO_LIBDIR, PSEUDO_LOCALSTATEDIR
+	  to allow specific overrides above and beyond PSEUDO_PREFIX
 
 2010-07-30:
     * (kscherer) added .gitignore file
